js/src/tests/test262/built-ins/Error/prototype/toString/length.js
assert
.
sameValue
(
Error
.
prototype
.
toString
.
length
0
)
;
verifyNotEnumerable
(
Error
.
prototype
.
toString
"
length
"
)
;
verifyNotWritable
(
Error
.
prototype
.
toString
"
length
"
)
;
verifyConfigurable
(
Error
.
prototype
.
toString
"
length
"
)
;
reportCompare
(
0
0
)
;
